# MediaShow2

./: .gitignore  CMakeLists.txt  List.txt  PROJECT_CONTEXT.md  README.md  Summary.txt  deep_analysis.md  package.py  pluginst.inf  test_bug.py  test_debug.py  test_parse.py  test_parse2.py  test_parse3.py  test_parse_c.py  test_tb2.cpp  test_trackbar.cpp  test_verify.py
sdk/: listplug.h
src/: app.manifest  dllmain.cpp  ds_player.cpp  ds_player.h  mf_player.cpp  mf_player.h  plugin_api.h  resources.rc
